# Pinterest-Scraper-Public

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  env.sample  pyproject.toml
backend/app/: app.py
backend/app/models/: pin.py  pinterest_account.py  prompt.py  session.py  update_messages.py
backend/app/routes/: health.py  prompts.py  websockets.py
backend/app/services/: celery_app.py
backend/app/services/automation/: actions.py  browser_factory.py  image_evaluator.py
backend/app/services/database/: db.py  repo.py
backend/app/services/messaging/: broadcast.py  ws_manager.py
backend/app/tasks/: __init__.py  validation.py  warmup_and_scraping.py
backend/app/tests/: test_image_evaluator.py  test_pinterest_bot.py  test_proxy_connection.py
backend/app/util/: config.py
deployment/: README.md  backend.Dockerfile  ec2_user_data.sh  env.backend.sample  env.frontend.sample  frontend.Dockerfile  init-mongo.js  pinterest_accounts.sample.json  seed_pinterest_accounts.py
docs/: architecture.md  prompt_run_1_collections.json  prompt_run_2_collections.json  warmup_eval_rationale.md
frontend/: README.md  package-lock.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/components/features/image-review/: image-review-header.tsx  progress-dialog.tsx  review-text.tsx  (+1 more)
frontend/src/hooks/: use-image-filters.ts  use-search-session.ts
frontend/src/lib/: api.ts  message-parser.ts  websocket.ts
frontend/src/types/: messages.ts  search.ts
(+7 files in other folders)
